fix width on mobile

--- a/style/resume/resume.css
+++ b/style/resume/resume.css
@@ -103,7 +103,9 @@
 }
 
 .list-underline {
-  width: 7em;
+  width: 6em;
+  padding: 1px;
+  background-color: red;
 }
 
 #skills > div > h3 {
@@ -154,7 +156,7 @@
 #section3,
 #section4,
 #section5 {
-  width: 80%;
+  width: 73%;
   padding: 0 2em;
   margin: auto;
 }
@@ -192,6 +194,14 @@
   .bachelor {
     padding-bottom: 0;
   }
+
+  #section1,
+  #section2,
+  #section3,
+  #section4,
+  #section5 {
+    width: 90%;
+  }
 }
 
 @media only screen and (max-width: 920px) {
@@ -213,19 +223,31 @@
   .areas-of-expertise {
     flex-direction: column;
   }
-}
 
-@media only screen and (max-width: 480px) {
   #skills div {
-    width: 40%;
+    width: 50%;
+  }
+
+  #section1,
+  #section2,
+  #section3,
+  #section4,
+  #section5 {
+    width: 78%;
+  }
+
+  .right-side-skill {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .skill-bottom {
+    margin-top: 2em;
   }
 }
 
 @media only screen and (max-width: 447px) {
-  #skills div {
-    width: fit-content;
-  }
-
   #section1 #title {
     font-size: 1.8em;
   }
